99_yaml_Dockerfile/02_k8s-yaml/rook-ceph/ceph-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
spec:
  ingressClassName: nginx
  rules:
  - host: ceph.ty.com
    https:
      paths:
      - backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              number: 8443
        path: /
        pathType: Prefix
